--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -2608,3 +2608,28 @@ h4.mainwp-custom-excludes {
     width: 100% !important;
   }
 }
+
+
+#mwp-server-information {
+    display: none;
+    margin: 10px 0;
+    padding: 0;
+    position: relative;
+}
+
+#mwp-server-information textarea {
+    border-radius: 0;
+    font-family: monospace;
+    font-size: 12px;
+    height: 300px;
+    line-height: 20px;
+    margin: 0;
+    outline: 0 none;
+    padding: 20px;
+    resize: none;
+    width: 100%;
+    -moz-border-radius:0;
+    -webkit-border-radius:0;
+}
+
+                                                                                  
