--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -2608,3 +2608,10 @@ h4.mainwp-custom-excludes {
     width: 100% !important;
   }
 }
+
+
+.mainwp_wp_offline td
+{
+    color: #ccc;
+    font-style: italic;
+}
