Small Update for WP 4
Postbox Headers are missing the bottom border without of this line.

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -202,6 +202,7 @@ h3.mainwp_box_title {
     line-height: 1.4;
     margin: 0;
     padding: 8px 12px;
+    border-bottom: 1px solid #eee;
 }
 
 .mainwp_inside {
