--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -1102,9 +1102,10 @@ li.hoverli {
 #mainwplogo
 {
     position: absolute;
-    top:2.5em;
+    top: 2.5em;
     right: 2em;
     display: block;
+    z-index: -1 !important;
 }
 #mainwplogo img
 {
@@ -1630,6 +1631,29 @@ background-position: 0 -16px;
 
 /* MainWP Radio Button */
 
+.mainwp-radio {
+    clear: both !important;
+    display: inline-block !important;
+}
+
+.mainwp-radio input[type=radio] {
+    float: left !important;
+    clear: both !important;
+    display: inline !important;
+    margin-top: 1px !important;
+}
+
+.mainwp_managegroups-insidebox .text {
+    font-size: 14px !important;
+    margin-top: -7px;
+}
+
+#mainwp_wrap-inside input[type=radio]:checked:before {
+    background: #7fb100 !important;
+}
+
+/*
+
 .mainwp-radio input[type=radio] {
     visibility: hidden;
 }
@@ -1661,8 +1685,8 @@ background-position: 0 -16px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    left: 1px;
-    top: 1px;
+    left: 1;
+    top: 1;
 
     background: none ;
 }
@@ -1678,8 +1702,8 @@ background-position: 0 -16px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     -webkit-box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 1);
     box-shadow: inset 0px 0px 0px 2px rgba(255, 255, 255, 1);
 
@@ -1690,6 +1714,8 @@ background-position: 0 -16px;
     background: -ms-linear-gradient(top, #446200 0%, #7fb100 100%);
     background: linear-gradient(top, #446200 0%, #7fb100 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#446200', endColorstr='#7fb100',GradientType=0 );
+
+    clear: both;
 }
 
 .mainwp-radio label:hover::after {
@@ -1712,6 +1738,8 @@ background-position: 0 -16px;
     margin-right: auto;
     width: 15px ;
 }
+
+*/
 
 /* Form Fields Style */
 
