--- a/css/fileuploader.css
+++ b/css/fileuploader.css
@@ -2,10 +2,10 @@
 
 .qq-upload-button {
     display:block; /* or inline-block */
-    width: 105px; padding: 7px 0; text-align:center;    
-    background:#880000; border-bottom:1px solid #ddd;color:#fff;
+    width: 105px; padding: 10px 20px; text-align:center; margin-left: auto; margin-right: auto; font-size: 16px; margin-bottom: 1em;
+    background:#7fb100; border-bottom:1px solid #ddd;color:#fff;
 }
-.qq-upload-button-hover {background:#cc0000;}
+.qq-upload-button-hover {background:#446200;}
 .qq-upload-button-focus {outline:1px dotted black;}
 
 .qq-upload-drop-area {
