Update layout, added "Require Backup Before Upgrade" setting for individual sites, added request reviews notice

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -1162,6 +1162,12 @@ background: #d5e4af !important;
     width: 160px;
 } /* fixed by bogdan, original 180px, changed to auto */
 
+
+.mainwp-submenu-wide {
+    width: auto !important;
+    min-width: 200px !important;
+}
+
 /*
 .mainwp_boxout {
     padding: 10px 7px 10px 7px;
