--- a/css/mainwp-responsive-layouts.css
+++ b/css/mainwp-responsive-layouts.css
@@ -2,6 +2,12 @@
 /*---------------[RESPONSIVE LAYOUTS]-------------*/
 /*------------------------------------------------*/
 
+@media only screen and ( max-width: 1300px ) {
+	#mainwp-refresh-bar-buttons .mainwp-button-red {
+		display: none;
+	}
+}
+
 @media only screen and ( min-width: 1101px ) {
 
 }
