--- a/css/mainwp-44.css
+++ b/css/mainwp-44.css
@@ -1,3 +1,8 @@
+.mainwp-ui a {
+    text-decoration: none !important;
+}
+
+
 .ui-tooltip {
     z-index: 99999999 !important;
 }
@@ -2833,6 +2838,10 @@ body.show-upload-theme .mainwp_config_box_left .install-theme-settings,
 body.show-upload-theme .mainwp_config_box_left .theme-browser {
     display: none;
 }
-.mainwp-tabs .nav-tab {
-    float: none !important;
+
+.mainwp-grabbing-info-note {
+    font-size: 24px;
+    color: #666;
+    font-weight: lighter;
+    font-style: italic;
 }
